2007-05-25  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/inputfield.py (ListField._load_list_data): Invalid
	`range()' usage fixed.

2007-05-25  Milan Zamazal  <pdm@brailcom.org>

	* pytis/form/inputfield.py (ListField._load_list_data): Use safe
	enumerator methods.

	* pytis/data/types_.py (DataEnumerator.rows): New method.

2007-05-23  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py (DBDataPostgreSQL.last_row_number):
	Restore stopped select if necessary.

2007-05-22  Milan Zamazal  <pdm@brailcom.org>

	* pytis/web/form.py (CheckRowsForm.__init__): Invalid variable
	reference fixed.

2007-05-22  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (_SubmittableForm): New class.
	(EditForm, CheckRowsForm): Derive from it.
	(CheckRowsForm): Consider all checkable columns to be Boolean
	columns present in the row.

2007-05-22  Milan Zamazal  <pdm@brailcom.org>

	* pytis/web/form.py (CheckRowsForm.__init__): New arguments and
	attributes `handler' and `action'.
	(CheckRowsForm._export_row): Make checkboxes checked according to
	the corresponding values.
	(CheckRowsForm._export_buttons, CheckRowsForm.export): New
	methods.

2007-05-21  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/list.py: Removed outdated comment.

	* pytis/form/dualform.py: Cosmetic improvement.

	* pytis/presentation/field.py: Don't invoke computers on
	initialization, when the passed 'row' is None and 'new' is False.
	Reinitialize also virtual columns on each `set_row' call.

	* pytis/presentation/_test.py: Updated.

	* pytis/form/form.py (PopupForm.run): Rollback only if transaction
	is defined.
	(EditForm._commit_form): Reset the row even if the data insert
	operation desn't return the inserted row.

2007-05-18  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py
	(PostgreSQLStandardBindingHandler._pdbb_create_sql_commands.make_lock_command.find_real_key):
	Return None if the information can't be retrieved.

2007-05-18  Tomas Cerha  <cerha@brailcom.org>
